2009-01-15  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: Made GetLink method more robust.

2009-01-15  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting/MarkupSyntaxMode.cs: Markup syntax mode
	now takes default color from style.

2009-01-14  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: Fix NRE on docs without
	highlighting.

2009-01-14  Mike Krüger  <mkrueger@novell.com>

	* Styles/C64Style.xml:
	* Styles/BrownStyle.xml:
	* Styles/OblivionStyle.xml:
	* Styles/TangoLightStyle.xml:
	* Styles/VisualStudioStyle.xml:
	* Mono.TextEditor.Highlighting/Style.cs:
	* Mono.TextEditor.Highlighting/MarkupSyntaxMode.cs: Added link color
	support & markup can now re-use style defined colors

2009-01-14  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting/SyntaxMode.cs:
	* Mono.TextEditor.Highlighting/MarkupSyntaxMode.cs: fixed cut & paste
	issue.

2009-01-14  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/LinkEventArgs.cs:
	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor.Highlighting/Span.cs: Added link support.

2009-01-13  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor.Vi/ViActions.cs: Add a ToggleCase action.

	* Mono.TextEditor.Vi/ViMode.cs: Implement ~, :$, :0. Make u work while
	there's a selection.

2009-01-13  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/ClipboardActions.cs:
	* Mono.TextEditor.Highlighting/SyntaxMode.cs: Worked on copy operation
	with markup syntax mode.

2009-01-08  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.TextEditor/TextEditor.cs: Don't add/remove bookmarks when
	clicking on the icon bar. It will now add/remove breakpoints.

2009-01-07  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: fixed Bug 459732 - Cursor placed in
	the wrong position.

2009-01-06  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting/SyntaxMode.cs: